--- a/app/global.scss
+++ b/app/global.scss
@@ -3,6 +3,7 @@
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 .font-lato {
   font-family: "Lato", sans-serif;
 }
@@ -13,6 +14,14 @@
     font-family: "Dancing Script", cursive;
 
 }
+.font-roboto{
+  font-family: "Roboto", sans-serif;
+
+}
+.font-dm-sans{
+  font-family: "DM Sans", sans-serif;
+
+}
 .container {
   @apply max-w-[1320px] mx-auto;
 }
@@ -21,8 +30,14 @@
   @apply font-monstar font-semibold text-center align-middle lg:leading-[72px] md:leading-[80px] leading-[50px] text-3xl  md:text-5xl lg:text-[64px];
 }
 
+.section-name{
+  @apply text-base text-primaryHover font-roboto font-semibold;
+}
+.section-title{
+  @apply font-dm-sans lg:text-[48px] lg:leading-[56px] font-bold  text-3xl ;
+}
 .section-description{
-    @apply font-lato font-medium text-[18px] leading-[28px] text-center ;
+    @apply font-roboto font-normal text-base  ;
 
 }
 
@@ -84,3 +99,7 @@
   
   
  
+  //echostick
+  .custom-tooltip .ant-tooltip-arrow::before {
+    background-color: green;
+  }
